[package]
name = "msxterm"
version = "0.2.0"
edition = "2021"
authors = ["Akio Setsumasa","<setumasa@gmail.com>"]
description = "CUI terminal software for MSX0"
repository = "https://github.com/akio-se/msxterm"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "11.0.0"
clap = { version = "4.1", features = ["derive"] }

